--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ params:
   base_font: sans-serif
   header:
     title: App
-    logo: images/logo.svg
+    logo: images/logo1-h-k7f8ixth-1.png
     logo_alt: App logo
     has_primary_nav: true
     primary_nav_links:
