--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
     title: App
     logo: images/logo1-h-k7f8ixth-1.png
     logo_alt: App logo
-    has_primary_nav: true
+    has_primary_nav: false
     primary_nav_links:
       - label: Pricing
         url: /pricing
