--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ params:
         style: link
     has_secondary_nav: true
     secondary_nav_links:
-      - label: App Store
+      - label: HOME
         url: /pricing
         style: primary
       - label: Google Play
