--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ params:
       - label: HOME
         url: /pricing
         style: primary
-      - label: C
+      - label: Contact
         url: /pricing
         style: secondary
     has_anncmnt: true
