--- a/config.yaml
+++ b/config.yaml
@@ -76,7 +76,7 @@ params:
     has_social: true
     social_links:
       - label: Twitter
-        url: 'https://twitter.com/'
+        url: 'https://twitter.com/kloudvibe'
         style: link
         has_icon: true
         icon: twitter
