--- a/config.yaml
+++ b/config.yaml
@@ -110,7 +110,7 @@ params:
         icon: vimeo
         icon_position: center
         new_window: true
-    content: '&copy; Stackbit. All rights reserved. This Jamstack site was created '
+    content: '&copy; Stackbit. All rights reserved. '
   domain: 'https://best-spider-bdcb6.netlify.app'
 taxonomies:
   stub: stub
