--- a/config.yaml
+++ b/config.yaml
@@ -64,7 +64,7 @@ params:
       - label: Tutorials
         url: /blog/category/tutorials
         style: link
-    has_tertiary_nav: true
+    has_tertiary_nav: false
     tertiary_nav_title: Legal
     tertiary_nav_links:
       - label: Terms & Conditions
