--- a/config.yaml
+++ b/config.yaml
@@ -43,7 +43,7 @@ params:
   footer:
     logo: images/logo1-h-k7f8ixth-1.png
     logo_alt: App logo
-    has_primary_nav: true
+    has_primary_nav: false
     primary_nav_title: Company
     primary_nav_links:
       - label: About
