config.yaml: updated style in params

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ title: Stackbit App Theme
 baseURL: /
 params:
   layout_type: full-width
-  style: classic
+  style: minimal
   palette: blue
   mode: light
   base_font: sans-serif
