config.yaml: updated content in footer

--- a/config.yaml
+++ b/config.yaml
@@ -54,7 +54,7 @@ params:
     tertiary_nav_links: []
     has_social: true
     social_links: []
-    content: lorem-ipsum
+    content: Kloudvibe
     links: []
 taxonomies:
   stub: stub
