config.yaml: updated social_links in footer

--- a/config.yaml
+++ b/config.yaml
@@ -62,6 +62,14 @@ params:
         icon_position: right
         new_window: false
         no_follow: false
+      - label: lorem-ipsum
+        url: '#'
+        style: link
+        has_icon: false
+        icon: arrow-left
+        icon_position: right
+        new_window: false
+        no_follow: false
     content: Kloudvibe
     links: []
     logo: images/logo1-h-k7f8ixth-1.png
