--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ params:
       More](/pricing/)**
     anncmnt_align: left
     anncmnt_is_home_only: true
-    anncmnt_has_close: false
+    anncmnt_has_close: true
     anncmnt_id: new-features
   domain: 'https://best-spider-bdcb6.netlify.app'
 taxonomies:
