--- a/config.yaml
+++ b/config.yaml
@@ -32,7 +32,7 @@ params:
       - label: NEWS
         url: /pricing
         style: secondary
-    has_anncmnt: true
+    has_anncmnt: false
     anncmnt_content: >-
       Curabitur ac tellus mattis, tempor ipsum eu, eleifend sapien. **[Learn
       More](/pricing/)**
