--- a/config.yaml
+++ b/config.yaml
@@ -32,6 +32,14 @@ params:
       - label: NEWS
         url: /pricing
         style: secondary
+      - label: lorem-ipsum
+        url: '#'
+        style: link
+        has_icon: false
+        icon: arrow-left
+        icon_position: right
+        new_window: false
+        no_follow: false
     has_anncmnt: false
     anncmnt_content: >-
       Curabitur ac tellus mattis, tempor ipsum eu, eleifend sapien. **[Learn
