config.yaml: updated style in secondary_nav_links

--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,7 @@ params:
         style: secondary
       - label: About us
         url: /about
-        style: link
+        style: primary
         has_icon: false
         icon: arrow-left
         icon_position: right
