--- a/config.yaml
+++ b/config.yaml
@@ -32,7 +32,7 @@ params:
       - label: NEWS
         url: /pricing
         style: secondary
-      - label: About us
+      - label: About
         url: /about
         style: primary
         has_icon: false
