--- a/config.yaml
+++ b/config.yaml
@@ -49,6 +49,21 @@ params:
     anncmnt_has_close: true
     anncmnt_id: new-features
   domain: 'https://best-spider-bdcb6.netlify.app'
+  footer:
+    logo_alt: lorem-ipsum
+    has_primary_nav: true
+    primary_nav_title: lorem-ipsum
+    primary_nav_links: []
+    has_secondary_nav: true
+    secondary_nav_title: lorem-ipsum
+    secondary_nav_links: []
+    has_tertiary_nav: true
+    tertiary_nav_title: lorem-ipsum
+    tertiary_nav_links: []
+    has_social: true
+    social_links: []
+    content: lorem-ipsum
+    links: []
 taxonomies:
   stub: stub
 disableKinds:
