--- a/config.yaml
+++ b/config.yaml
@@ -66,7 +66,7 @@ params:
         url: '#'
         style: link
         has_icon: false
-        icon: arrow-left
+        icon: facebook
         icon_position: right
         new_window: false
         no_follow: false
