--- a/config.yaml
+++ b/config.yaml
@@ -68,7 +68,7 @@ params:
         has_icon: false
         icon: facebook
         icon_position: right
-        new_window: false
+        new_window: true
         no_follow: false
     content: lorem-ipsum
     links: []
