--- a/config.yaml
+++ b/config.yaml
@@ -63,7 +63,7 @@ params:
     has_social: true
     social_links:
       - label: Facebook
-        url: '#'
+        url: 'https://www.facebook.com/klouduser'
         style: link
         has_icon: false
         icon: facebook
