config.yaml: updated label in social_links

--- a/config.yaml
+++ b/config.yaml
@@ -70,7 +70,7 @@ params:
         icon_position: right
         new_window: true
         no_follow: false
-      - label: lorem-ipsum
+      - label: Linkedin
         url: '#'
         style: link
         has_icon: false
