--- a/config.yaml
+++ b/config.yaml
@@ -71,7 +71,7 @@ params:
         new_window: true
         no_follow: false
       - label: Linkedin
-        url: '#'
+        url: 'https://www.facebook.com/klouduser'
         style: link
         has_icon: false
         icon: arrow-left
