config.yaml: updated style in social_links

--- a/config.yaml
+++ b/config.yaml
@@ -72,7 +72,7 @@ params:
         no_follow: false
       - label: Linkedin
         url: 'https://www.facebook.com/klouduser'
-        style: link
+        style: primary
         has_icon: false
         icon: arrow-left
         icon_position: right
