config.yaml: updated icon in social_links

--- a/config.yaml
+++ b/config.yaml
@@ -74,7 +74,7 @@ params:
         url: 'https://www.facebook.com/klouduser'
         style: primary
         has_icon: true
-        icon: arrow-left
+        icon: linkedin
         icon_position: right
         new_window: false
         no_follow: false
