--- a/config.yaml
+++ b/config.yaml
@@ -65,7 +65,7 @@ params:
     has_secondary_nav: true
     secondary_nav_title: lorem-ipsum
     secondary_nav_links: []
-    has_tertiary_nav: true
+    has_tertiary_nav: false
     tertiary_nav_title: lorem-ipsum
     tertiary_nav_links:
       - label: lorem-ipsum
