config.yaml: updated has_tertiary_nav in footer

--- a/config.yaml
+++ b/config.yaml
@@ -73,7 +73,7 @@ params:
         icon_position: right
         new_window: false
         no_follow: false
-    has_tertiary_nav: false
+    has_tertiary_nav: true
     tertiary_nav_title: lorem-ipsum
     tertiary_nav_links:
       - label: lorem-ipsum
