--- a/config.yaml
+++ b/config.yaml
@@ -52,7 +52,7 @@ params:
   footer:
     logo_alt: lorem-ipsum
     has_primary_nav: true
-    primary_nav_title: lorem-ipsum
+    primary_nav_title: Menu
     primary_nav_links:
       - label: lorem-ipsum
         url: '#'
