--- a/config.yaml
+++ b/config.yaml
@@ -63,7 +63,7 @@ params:
         new_window: false
         no_follow: false
     has_secondary_nav: true
-    secondary_nav_title: lorem-ipsum
+    secondary_nav_title: Upcoming Courses
     secondary_nav_links:
       - label: lorem-ipsum
         url: '#'
