--- a/config.yaml
+++ b/config.yaml
@@ -56,7 +56,7 @@ params:
     primary_nav_links:
       - label: Home
         url: /
-        style: secondary
+        style: link
         has_icon: false
         icon: arrow-left
         icon_position: right
