config.yaml: updated has_icon in primary_nav_links

--- a/config.yaml
+++ b/config.yaml
@@ -57,7 +57,7 @@ params:
       - label: Home
         url: /
         style: secondary
-        has_icon: false
+        has_icon: true
         icon: arrow-left
         icon_position: right
         new_window: false
