--- a/config.yaml
+++ b/config.yaml
@@ -62,6 +62,14 @@ params:
         icon_position: right
         new_window: false
         no_follow: false
+      - label: lorem-ipsum
+        url: '#'
+        style: link
+        has_icon: false
+        icon: arrow-left
+        icon_position: right
+        new_window: false
+        no_follow: false
     has_secondary_nav: true
     secondary_nav_title: Upcoming Courses
     secondary_nav_links:
