--- a/config.yaml
+++ b/config.yaml
@@ -67,7 +67,7 @@ params:
     secondary_nav_links:
       - label: See Our Courses
         url: /courses
-        style: link
+        style: secondary
         has_icon: false
         icon: arrow-left
         icon_position: right
