--- a/config.yaml
+++ b/config.yaml
@@ -68,7 +68,7 @@ params:
       - label: See Our Courses
         url: /courses
         style: secondary
-        has_icon: false
+        has_icon: true
         icon: arrow-left
         icon_position: right
         new_window: false
