--- a/config.yaml
+++ b/config.yaml
@@ -70,7 +70,7 @@ params:
         style: secondary
         has_icon: true
         icon: arrow-right
-        icon_position: center
+        icon_position: right
         new_window: false
         no_follow: false
     has_tertiary_nav: true
