--- a/config.yaml
+++ b/config.yaml
@@ -76,7 +76,7 @@ params:
     has_tertiary_nav: true
     tertiary_nav_title: Contact Us
     tertiary_nav_links:
-      - label: lorem-ipsum
+      - label: Contact
         url: '#'
         style: link
         has_icon: false
