--- a/config.yaml
+++ b/config.yaml
@@ -77,7 +77,7 @@ params:
     tertiary_nav_title: Contact Us
     tertiary_nav_links:
       - label: Contact
-        url: '#'
+        url: /contact
         style: link
         has_icon: false
         icon: arrow-left
