--- a/config.yaml
+++ b/config.yaml
@@ -78,7 +78,7 @@ params:
     tertiary_nav_links:
       - label: Contact
         url: /about
-        style: link
+        style: secondary
         has_icon: false
         icon: arrow-left
         icon_position: right
