config.yaml: updated has_icon in tertiary_nav_links

--- a/config.yaml
+++ b/config.yaml
@@ -79,7 +79,7 @@ params:
       - label: Contact
         url: /about
         style: secondary
-        has_icon: false
+        has_icon: true
         icon: arrow-left
         icon_position: right
         new_window: false
