--- a/config.yaml
+++ b/config.yaml
@@ -80,7 +80,7 @@ params:
         url: /about
         style: secondary
         has_icon: true
-        icon: arrow-left
+        icon: arrow-right
         icon_position: right
         new_window: false
         no_follow: false
