--- a/config.yaml
+++ b/config.yaml
@@ -51,7 +51,7 @@ params:
   domain: 'https://best-spider-bdcb6.netlify.app'
   footer:
     logo_alt: lorem-ipsum
-    has_primary_nav: true
+    has_primary_nav: false
     primary_nav_title: ' '
     primary_nav_links:
       - label: Home
