--- a/config.yaml
+++ b/config.yaml
@@ -64,6 +64,7 @@ params:
     social_links: []
     content: lorem-ipsum
     links: []
+    logo: images/logo1-h-k7f8ixth-1.png
 taxonomies:
   stub: stub
 disableKinds:
