--- a/config.yaml
+++ b/config.yaml
@@ -52,7 +52,7 @@ params:
   footer:
     logo_alt: lorem-ipsum
     has_primary_nav: true
-    primary_nav_title: lorem-ipsum
+    primary_nav_title: ' '
     primary_nav_links: []
     has_secondary_nav: true
     secondary_nav_title: lorem-ipsum
