--- a/config.yaml
+++ b/config.yaml
@@ -54,7 +54,7 @@ params:
     has_primary_nav: true
     primary_nav_title: ' '
     primary_nav_links:
-      - label: lorem-ipsum
+      - label: Home
         url: '#'
         style: link
         has_icon: false
