--- a/config.yaml
+++ b/config.yaml
@@ -63,7 +63,7 @@ params:
         new_window: false
         no_follow: false
     has_secondary_nav: true
-    secondary_nav_title: lorem-ipsum
+    secondary_nav_title: ' '
     secondary_nav_links: []
     has_tertiary_nav: true
     tertiary_nav_title: lorem-ipsum
