config.yaml: updated secondary_nav_links in footer

--- a/config.yaml
+++ b/config.yaml
@@ -64,7 +64,15 @@ params:
         no_follow: false
     has_secondary_nav: true
     secondary_nav_title: ' '
-    secondary_nav_links: []
+    secondary_nav_links:
+      - label: lorem-ipsum
+        url: '#'
+        style: link
+        has_icon: false
+        icon: arrow-left
+        icon_position: right
+        new_window: false
+        no_follow: false
     has_tertiary_nav: true
     tertiary_nav_title: lorem-ipsum
     tertiary_nav_links: []
