--- a/config.yaml
+++ b/config.yaml
@@ -65,7 +65,7 @@ params:
     has_secondary_nav: true
     secondary_nav_title: ' '
     secondary_nav_links:
-      - label: lorem-ipsum
+      - label: Our Courses
         url: '#'
         style: link
         has_icon: false
