--- a/config.yaml
+++ b/config.yaml
@@ -66,7 +66,7 @@ params:
     secondary_nav_title: ' '
     secondary_nav_links:
       - label: Our Courses
-        url: '#'
+        url: /courses
         style: link
         has_icon: false
         icon: arrow-left
