--- a/config.yaml
+++ b/config.yaml
@@ -75,7 +75,15 @@ params:
         no_follow: false
     has_tertiary_nav: true
     tertiary_nav_title: ' '
-    tertiary_nav_links: []
+    tertiary_nav_links:
+      - label: lorem-ipsum
+        url: '#'
+        style: link
+        has_icon: false
+        icon: arrow-left
+        icon_position: right
+        new_window: false
+        no_follow: false
     has_social: true
     social_links:
       - label: lorem-ipsum
