--- a/config.yaml
+++ b/config.yaml
@@ -86,7 +86,7 @@ params:
         no_follow: false
     has_social: true
     social_links:
-      - label: lorem-ipsum
+      - label: Facebook
         url: '#'
         style: link
         has_icon: false
