--- a/config.yaml
+++ b/config.yaml
@@ -89,7 +89,7 @@ params:
       - label: Facebook
         url: 'https://www.facebook.com/klouduser'
         style: link
-        has_icon: false
+        has_icon: true
         icon: arrow-left
         icon_position: right
         new_window: false
