--- a/config.yaml
+++ b/config.yaml
@@ -94,7 +94,7 @@ params:
         icon_position: right
         new_window: false
         no_follow: false
-      - label: lorem-ipsum
+      - label: Twitter
         url: '#'
         style: link
         has_icon: false
