--- a/config.yaml
+++ b/config.yaml
@@ -95,7 +95,7 @@ params:
         new_window: false
         no_follow: false
       - label: Twitter
-        url: '#'
+        url: 'https://www.facebook.com/klouduser'
         style: link
         has_icon: false
         icon: arrow-left
