--- a/config.yaml
+++ b/config.yaml
@@ -98,7 +98,7 @@ params:
         url: 'https://www.facebook.com/klouduser'
         style: link
         has_icon: true
-        icon: arrow-left
+        icon: twitter
         icon_position: right
         new_window: false
         no_follow: false
